--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,6 @@
       { "src": "server.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/server.js"}]
+      { "src": "/(.*)", "dest": "/server.js"}
+    ]
   }
